new polybar getup

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -8,22 +8,33 @@
 ;=====================================================
 
 [colors]
-background = #1b123a
-background-alt = #856e8e
+background = #9e4d79
+background-alt = #88406e
 foreground = #f3f4f5
 foreground-alt = #d66c94
 primary = #48cfcb
-secondary = #a26af9
-tertiary = #d66c94 
+secondary = #3c3760
+;#302b4e
+tertiary = #d66c94
+tertiary-alt = #a26af9
 alert = #ffffff
-temp = #7b284e
-#background = #222
-#background-alt = #444
-#foreground = #dfdfdf
-#foreground-alt = #55
-#primary = #ffb52a
-#secondary = #e60053
-#alert = #bd2c40
+
+[settings]
+screenchange-reload = true
+
+throttle-output = 5
+throttle-output-for = 10
+
+throttle-input-for = 30
+
+;format-foreground = ${colors.foreground}
+;format-background = ${colors.tertiary}
+;format-underline = ${colors.secondary}
+;format-overline =
+;format-spacing = 1
+;format-padding = 1
+;format-margin =
+;format-offset =
 
 [global/wm]
 margin-top = 5
@@ -45,18 +56,18 @@ overline-color = #f00
 underline-size = 4
 underline-color = #00f
 
-border-bottom-size = 4
-border-bottom-color = ${colors.tertiary}
+border-top-size = 7
+border-top-color = ${colors.secondary}
 
 padding-left = 0
-padding-right = 2
-module-margin-left = 1
-module-margin-right = 2
+padding-right = 0
+module-margin-left = 0
+module-margin-right = 0
 
-font-0 = "Noto Sans:size=12"
-font-1 = "Ionicons:size=12"
-font-2 = "Siji:size=12"
-font-3 = "FontAwesome:size=12"
+font-0 = "Noto Sans:size=11"
+font-1 = "Ionicons:size=11"
+font-2 = "Siji:size=11"
+font-3 = "FontAwesome:size=11"
 
 ;font-0 = "Noto Sans:pixelsize=12"
 ;font-1 = "Ionicons:pixelsize=12"
@@ -64,23 +75,21 @@ font-3 = "FontAwesome:size=12"
 ;font-3 = "FontAwesome:pixelsize=12"
 
 modules-left = i3 xwindow
-modules-center = date 
-modules-right = mpd wlan cpu memory temperature volume powermenu
+modules-center = mpd
+modules-right = volume date wlan cpu memory temperature powermenu
 
 tray-position = right
 tray-padding = 2
 ;tray-transparent = true
-;tray-background = #0063ff
+tray-background = ${colors.tertiary-alt}
 
 wm-restack = i3
-
+ipc = true
+radius = 7
 ;override-redirect = true
 
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
 
 [module/cmus]
 type = custom/script
@@ -91,16 +100,18 @@ tail = true
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
+label-padding = 1
+label-background = ${colors.background-alt}
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 label-layout = %{F#55}%{F-} %layout%
-label-layout-underline = ${colors.secondary}
+;label-layout-underline = ${colors.secondary}
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
+;label-indicator-underline = ${colors.secondary}
 
 [module/filesystem]
 type = internal/fs
@@ -115,25 +126,6 @@ label-mounted = %mountpoint%: %percentage_free%%
 label-unmounted = %mountpoint%: not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-padding = 2
-
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
-
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -146,20 +138,22 @@ label-mode-background = ${colors.tertiary}
 
 label-focused = 
 label-focused-background = ${colors.tertiary}
-label-focused-underline = ${colors.secondary} 
-label-focused-padding = ${module/bspwm.label-focused-padding}
+;label-focused-underline = ${colors.secondary}
+label-focused-padding = 2
 
 label-unfocused = 
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+label-unfocused-padding = 2
+label-unfocused-background = ${colors.tertiary-alt}
+;label-unfocused-underline = ${colors.secondary}
 
 label-urgent = 
 label-urgent-background = ${colors.primary}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
+label-urgent-padding = 2
 
 label-visible = 
 label-visible-background = ${colors.primary}
-label-visible-underline = #a26af9
-label-visible-padding = ${self.label-focused-padding}
+;label-visible-underline = #a26af9
+label-visible-padding = 2
 
 [module/mpd]
 type = internal/mpd
@@ -183,52 +177,44 @@ icon-repeat = 
 toggle-on-foreground = ${colors.primary}
 toggle-off-foreground = #66
 
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = │
-bar-indicator-foreground = #ff
-bar-indicator-font = 1
-bar-fill = ─
-bar-fill-font = 1
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 1
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = 
+format-prefix-padding = 1
 format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.temp}
-format-underline = #f90000
+format-prefix-background = ${colors.tertiary-alt}
+;format-prefix-underline = ${colors.secondary}
 label = %percentage%%
-label-underline = ${colors.temp}
+label-padding = 1
+label-background = ${colors.tertiary-alt}
+;label-underline = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #63fefe
+format-prefix = 
+format-prefix-padding = 1
+format-prefix-foreground = ${colors.foreground}
+format-prefix-background = ${colors.tertiary}
+;format-prefix-underline = ${colors.secondary}
 label = %percentage_used%%
+label-padding = 1
+label-background = ${colors.tertiary}
+;label-underline = ${colors.secondary}
 
 [module/wlan]
 type = custom/script
 interval = 1
 exec = "nmcli d show wlp0s26u1u5 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
 format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-padding = 1
+format-prefix-background = ${colors.tertiary}
+format-prefix-foreground = ${colors.foreground}
+;format-prefix-underline = ${colors.secondary}
+label-padding = 1
+label-background = ${colors.tertiary}
+;label-underline = ${colors.secondary}
 
 #[module/wlan]
 #type = internal/network
@@ -243,11 +229,11 @@ format-prefix-foreground = ${colors.foreground-alt}
 #label-disconnected = %ifname% disconnected
 #label-disconnected-foreground = ${colors.foreground-alt}
 #
-#ramp-signal-0 =  
-#ramp-signal-1 =  
-#ramp-signal-2 =  
-#ramp-signal-3 =  
-#ramp-signal-4 =  
+#ramp-signal-0 = 
+#ramp-signal-1 = 
+#ramp-signal-2 = 
+#ramp-signal-3 = 
+#ramp-signal-4 = 
 #ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
@@ -255,12 +241,12 @@ type = internal/network
 interface = enp3s0
 interval = 3.0
 
-format-connected-underline = #55aa55
+;format-connected-underline = #55aa55
 format-connected-prefix = " "
 format-connected-foreground-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
-format-disconnected-underline = ${self.format-connected-underline}
+;format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %ifname% disconnected
 label-disconnected-foreground = ${colors.foreground-alt}
 
@@ -268,81 +254,64 @@ label-disconnected-foreground = ${colors.foreground-alt}
 type = internal/date
 interval = 5
 
-date = " %a, %b %d "
-date-alt = " %Y-%m-%d "
+date = "%a, %b %d"
+date-alt = "%Y-%m-%d"
 
-time = " %l:%M %p "
-time-alt = " %H:%M:%S "
+time = "%l:%M %p"
+time-alt = "%H:%M:%S"
 
-format-prefix = " "
-format-prefix-background = ${colors.background}
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.secondary}
+format-prefix = 
+format-prefix-padding = 1
+format-prefix-foreground = ${colors.tertiary}
+format-prefix-background = ${colors.tertiary-alt}
+;format-underline = ${colors.secondary}
 
 label = %date% %time%
-label-background = ${colors.background}
+label-background = ${colors.tertiary-alt}
+label-padding = 1
 
 [module/volume]
 type = internal/volume
 
 format-volume = <ramp-volume> <bar-volume>
+format-volume-padding = 1
+format-volume-background = ${colors.background-alt}
+;format-volume-underline = ${colors.secondary}
+
 label-muted = 
 label-volume = 
+label-background = ${colors.tertiary}
+label-padding = 1
+label-volume-foreground = ${colors.foreground}
+label-volume-background = ${colors.tertiary}
+
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
-ramp-volume-3 =  
-label-volume-foreground = ${colors.foreground-alt}
-label-volume-background = ${colors.tertiary}
-label-background = ${colors.secondary}
+ramp-volume-3 = 
 
 ;format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
+format-muted-background = ${colors.tertiary-alt}
+format-muted-foreground = ${colors.foreground}
+format-muted-padding = 2
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #63fefe
-bar-volume-foreground-1 = #63fefe
-bar-volume-foreground-2 = #63fefe
-bar-volume-foreground-3 = #633cb0
-bar-volume-foreground-4 = #633cb0
-bar-volume-foreground-5 = ${colors.foreground-alt}
-bar-volume-foreground-6 = ${colors.foreground-alt}
+bar-volume-foreground-0 = ${colors.foreground}
+bar-volume-foreground-1 = ${colors.foreground}
+bar-volume-foreground-2 = ${colors.foreground}
+bar-volume-foreground-3 = ${colors.primary}
+bar-volume-foreground-4 = ${colors.primary}
+bar-volume-foreground-5 = ${colors.tertiary}
+bar-volume-foreground-6 = ${colors.tertiary}
 bar-volume-gradient = false
 bar-volume-indicator = ""
 bar-volume-indicator-font = 1
-bar-volume-indicator-foreground = #ff
+bar-volume-indicator-foreground = ${colors.foreground}
 bar-volume-fill = 
 bar-volume-fill-font = 1
 bar-volume-empty = 
 bar-volume-empty-font = 1
-bar-volume-empty-foreground = #acc1c9
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = AC0
-full-at = 98
-
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
+bar-volume-empty-foreground = ${colors.secondary}
 
 [module/temperature]
 type = internal/temperature
@@ -350,38 +319,56 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = ${colors.temp}
+format-background = ${colors.tertiary-alt}
+format-foreground = ${colors.foreground-alt}
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+format-warn-underline = ${colors.primary}
+format-prefix-background = ${colors.tertiary-alt}
+format-prefix-foreground = ${colors.foreground-alt}
+;format-prefix-underline = ${colors.secondary}
 
 label = %temperature%
+;label-underline = ${colors.secondary}
+label-padding = 1
+label-background = ${colors.tertiary-alt}
+label-foreground = ${colors.foreground-alt}
 label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = ${colors.primary}
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
+ramp-padding = 1
 
 [module/powermenu]
 type = custom/menu
+width = 100%
 
-format-spacing = 1
-background = #ff3399
-label-open = "  " 
-label-open-foreground = ${colors.foreground-alt}
-label-open-underline = ${colors.secondary}
-label-close = "  "
-label-close-foreground = ${colors.foreground-alt}
-label-close-underline = ${colors.secondary}
+format-spacing = 0
+
+label-open = 
+label-open-padding = 1
+label-open-background = ${colors.tertiary}
+label-open-foreground = ${colors.foreground}
+;label-open-underline = ${colors.secondary}
+
+label-close = 
+label-close-padding = 1
+label-close-foreground = ${colors.foreground}
+label-close-background = ${colors.tertiary}
+;label-close-underline = ${colors.secondary}
 
 menu-0-0 = " Reboot "
-menu-0-0-underline = ${colors.secondary}
-menu-0-0-foreground = #63fefe
+;menu-0-0-underline = ${colors.secondary}
+menu-0-0-foreground = ${colors.foreground}
+menu-0-0-background = ${colors.tertiary}
 menu-0-0-exec = sudo systemctl reboot
+
 menu-0-1 = " PowerOff "
 menu-0-1-exec = sudo systemctl poweroff
-menu-0-1-foreground = #63fefe
-menu-0-1-underline = ${colors.secondary}
+menu-0-1-foreground = ${colors.foreground}
+menu-0-1-background = ${colors.tertiary}
+;menu-0-1-underline = ${colors.secondary}
 
 ; vim:ft=dosini
