swap background and background-alt

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -8,8 +8,8 @@
 ;=====================================================
 
 [colors]
-background = #9e4d79
-background-alt = #88406e
+background = #88406e
+background-alt = #9e4d79
 foreground = #f3f4f5
 foreground-alt = #d66c94
 primary = #48cfcb
