--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -42,9 +42,9 @@ margin-bottom = 5
 
 [bar/topbar]
 monitor = ${env:MONITOR:HDMI-0}
-width = 100%
-height = 27
-offset-x = 0
+width = 95%
+height = 30
+offset-x = 50
 offset-y = 0
 
 ;background = ${xrdb:color9}
@@ -86,7 +86,7 @@ tray-background = ${colors.tertiary-alt}
 wm-restack = i3
 ipc = true
 radius = 7
-;override-redirect = true
+override-redirect = true
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
