update compton start settings and config

--- a/.compton.conf
+++ b/.compton.conf
@@ -5,7 +5,7 @@
 # Shadow
 shadow = true;
 no-dnd-shadow = true;
-no-dock-shadow = true;
+no-dock-shadow = false;
 clear-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
@@ -14,22 +14,21 @@ shadow-opacity = 0.7;
 #shadow-red = 0.0;
 #shadow-green = 0.0;
 #shadow-blue = 0.0;
-shadow-exclude = [
- "! name~=''",
- "n:e:Notification",
- "n:w:*Firefox",
- "n:w:*Chromium*",
- "n:w:*Steam*",
- "n:w:*Google-chrome*",
- "class_g = 'Polybar'",
- "class_g = 'Notify-osd'",
- "_GTK_FRAME_EXTENTS@:c"
-];
+#shadow-exclude = [
+# "! name~=''",
+# "n:e:Notification",
+# "n:w:*Firefox",
+# "n:w:*Chromium*",
+# "n:w:*Steam*",
+# "n:w:*Google-chrome*",
+# "class_g = 'Notify-osd'",
+# "_GTK_FRAME_EXTENTS@:c"
+#];
 
 # Opacity
 menu-opacity = 0.8;
 inactive-opacity = 0.8;
-#active-opacity = 0.8;
+# active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = true;
 alpha-step = 0.06;
@@ -46,46 +45,46 @@ blur-background-exclude = [
  "window_type = 'desktop'",
  "_GTK_FRAME_EXTENTS@:c"
 ];
-      
+
 # Fading
 fading = true;
 fade-delta = 10;
 fade-in-step = 0.05;
 fade-out-step = 0.05;
-#no-fading-openclose = true;
-#no-fading-destroyed-argb = true;
+# no-fading-openclose = true;
+# no-fading-destroyed-argb = true;
 fade-exclude = [ ];
 
 # Other
+backend = "glx";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
+vsync = "opengl";
 dbe = false;
 paint-on-overlay = true;
-#sw-opti = true;
-#unredir-if-possible = true;
-#unredir-if-possible-delay = 5000;
-#unredir-if-possible-exclude = [ ];
+# sw-opti = true;
+# unredir-if-possible = true;
+# unredir-if-possible-delay = 5000;
+# unredir-if-possible-exclude = [ ];
 #focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
-#resize-damage = 1;
+# resize-damage = 1;
 
 # GLX backend
-backend = "glx";
-vsync = "opengl";
-#glx-no-stencil = true;
+# glx-no-stencil = true;
 #glx-copy-from-front = false;
-#glx-use-copysubbuffermesa = true;
-#glx-no-rebind-pixmap = true;
+# glx-use-copysubbuffermesa = true;
+# glx-no-rebind-pixmap = true;
 #glx-swap-method = "undefined";
-#glx-use-gpushader4 = true;
-#xrender-sync = true;
-#xrender-sync-fence = true;
+# glx-use-gpushader4 = true;
+# xrender-sync = true;
+# xrender-sync-fence = true;
 
 # Window type settings
 wintypes: {
