replace volume module bg

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -275,7 +275,7 @@ type = internal/volume
 
 format-volume = <ramp-volume> <bar-volume>
 format-volume-padding = 1
-format-volume-background = ${colors.background-alt}
+format-volume-background = ${colors.background}
 ;format-volume-underline = ${colors.secondary}
 
 label-muted = 
