more padding, powermenu improvements

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -14,7 +14,6 @@ foreground = #f3f4f5
 foreground-alt = #d66c94
 primary = #48cfcb
 secondary = #3c3760
-;#302b4e
 tertiary = #d66c94
 tertiary-alt = #a26af9
 alert = #ffffff
@@ -100,7 +99,7 @@ tail = true
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-label-padding = 1
+label-padding = 2
 label-background = ${colors.background-alt}
 
 [module/xkeyboard]
@@ -181,12 +180,12 @@ toggle-off-foreground = #66
 type = internal/cpu
 interval = 2
 format-prefix = 
-format-prefix-padding = 1
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-padding = 2
+format-prefix-foreground = ${colors.secondary}
 format-prefix-background = ${colors.tertiary-alt}
 ;format-prefix-underline = ${colors.secondary}
 label = %percentage%%
-label-padding = 1
+label-padding = 2
 label-background = ${colors.tertiary-alt}
 ;label-underline = ${colors.secondary}
 
@@ -194,12 +193,12 @@ label-background = ${colors.tertiary-alt}
 type = internal/memory
 interval = 2
 format-prefix = 
-format-prefix-padding = 1
-format-prefix-foreground = ${colors.foreground}
+format-prefix-padding = 2
+format-prefix-foreground = ${colors.background}
 format-prefix-background = ${colors.tertiary}
 ;format-prefix-underline = ${colors.secondary}
 label = %percentage_used%%
-label-padding = 1
+label-padding = 2
 label-background = ${colors.tertiary}
 ;label-underline = ${colors.secondary}
 
@@ -208,11 +207,11 @@ type = custom/script
 interval = 1
 exec = "nmcli d show wlp0s26u1u5 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
 format-prefix = 
-format-prefix-padding = 1
+format-prefix-padding = 2
 format-prefix-background = ${colors.tertiary}
-format-prefix-foreground = ${colors.foreground}
+format-prefix-foreground = ${colors.background}
 ;format-prefix-underline = ${colors.secondary}
-label-padding = 1
+label-padding = 2
 label-background = ${colors.tertiary}
 ;label-underline = ${colors.secondary}
 
@@ -242,7 +241,8 @@ interface = enp3s0
 interval = 3.0
 
 ;format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = 
+format-connected-padding = 2
 format-connected-foreground-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -261,27 +261,27 @@ time = "%l:%M %p"
 time-alt = "%H:%M:%S"
 
 format-prefix = 
-format-prefix-padding = 1
-format-prefix-foreground = ${colors.tertiary}
+format-prefix-padding = 2
+format-prefix-foreground = ${colors.secondary}
 format-prefix-background = ${colors.tertiary-alt}
 ;format-underline = ${colors.secondary}
 
 label = %date% %time%
 label-background = ${colors.tertiary-alt}
-label-padding = 1
+label-padding = 2
 
 [module/volume]
 type = internal/volume
 
 format-volume = <ramp-volume> <bar-volume>
-format-volume-padding = 1
+format-volume-padding = 2
 format-volume-background = ${colors.background}
 ;format-volume-underline = ${colors.secondary}
 
 label-muted = 
 label-volume = 
 label-background = ${colors.tertiary}
-label-padding = 1
+label-padding = 2
 label-volume-foreground = ${colors.foreground}
 label-volume-background = ${colors.tertiary}
 
@@ -320,26 +320,26 @@ warn-temperature = 60
 
 format = <ramp> <label>
 format-background = ${colors.tertiary-alt}
-format-foreground = ${colors.foreground-alt}
+format-foreground = ${colors.background}
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${colors.primary}
 format-prefix-background = ${colors.tertiary-alt}
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-foreground = ${colors.background}
 ;format-prefix-underline = ${colors.secondary}
 
 label = %temperature%
 ;label-underline = ${colors.secondary}
-label-padding = 1
+label-padding = 2
 label-background = ${colors.tertiary-alt}
-label-foreground = ${colors.foreground-alt}
+label-foreground = ${colors.foreground}
 label-warn = %temperature%
 label-warn-foreground = ${colors.primary}
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
-ramp-padding = 1
+ramp-foreground = ${colors.secondary}
+ramp-padding = 2
 
 [module/powermenu]
 type = custom/menu
@@ -348,27 +348,29 @@ width = 100%
 format-spacing = 0
 
 label-open = 
-label-open-padding = 1
+label-open-padding = 3
 label-open-background = ${colors.tertiary}
 label-open-foreground = ${colors.foreground}
 ;label-open-underline = ${colors.secondary}
 
 label-close = 
-label-close-padding = 1
+label-close-padding = 2
 label-close-foreground = ${colors.foreground}
-label-close-background = ${colors.tertiary}
+label-close-background = ${colors.background-alt}
 ;label-close-underline = ${colors.secondary}
 
-menu-0-0 = " Reboot "
+menu-0-0 = "Reboot"
+menu-0-0-padding = 2
 ;menu-0-0-underline = ${colors.secondary}
-menu-0-0-foreground = ${colors.foreground}
-menu-0-0-background = ${colors.tertiary}
+menu-0-0-foreground = ${colors.tertiary}
+menu-0-0-background = ${colors.background-alt}
 menu-0-0-exec = sudo systemctl reboot
 
-menu-0-1 = " PowerOff "
+menu-0-1 = "PowerOff"
+menu-0-1-padding = 2
 menu-0-1-exec = sudo systemctl poweroff
-menu-0-1-foreground = ${colors.foreground}
-menu-0-1-background = ${colors.tertiary}
+menu-0-1-foreground = ${colors.tertiary}
+menu-0-1-background = ${colors.background-alt}
 ;menu-0-1-underline = ${colors.secondary}
 
 ; vim:ft=dosini
