--- a/os/gentoo/laptop/etc/portage/make.conf
+++ b/os/gentoo/laptop/etc/portage/make.conf
@@ -16,26 +16,14 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-SYS="acpi av bluetooth policykit elogind caps threads rar filecaps emerge kdbus kmod suid gnutls uuid inotify lz4 mhash modules notification notifications startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate udev udisks xattr xkb xpm"
-PERIPH="evdev synaptics cdr dvd dvdr ieee1394 dbus memcached memlimit usb"
-NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap webkit priority pcap web"
-SEC="clamav gcrypt gpg crypt ssl x509 shadow sslv2 sslv3 pkcs11"
-LIB="minizip libx264 libfaac ieee1394 unicode gzip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand libcanberra libindicate"
-DEV="cxx cpp boost jit llvm sqlite introspection ctype gdbm json regex javascript html ssh lua luajit cli console mysql postgres markdown vim oracle nodejs redis libxml2 mongo perl npm"
-DESKTOP="X xcomposite gnome-keyring qt4 gtk3 nsplugin source cursors icons iconsets xscreensaver"
-GFX="aac amr faac gpl apng glamor aalib openvdb nouveau colord colors cg video glew css decode xrender xrandr cuda dga dri3 exif libav pgf blender theora fbcon fbcondecor gif jpeg kms glfw png mpeg mp4 nvidia emoticons graphicsmagick imagemagick gstreamer mime ncurses opengl raw svg v4l vaapi vdpau x264 xv xvmc xvid" 
-AUDIO="audioeffects audioscrobbler system-wide coreaudio sound aac alsa alsa-plugin equalizer glib x265 realtime pulseaudio qtmedia flac jack jackdbus lame mad ogg session openal portaudio frontend id3tag quicktime mp3 alisp double-precsision opus qtmedia"
-APP="256-color blink fading-colros focused-urgency font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell zsh-completion bash-completion branding"
-IGNORE="-static -adns -modemmanager -cups -plymouth -gnome -kde (-doc) -minimal -livecd -ffmpeg -debug -mdev -savedconfig -math -make-symlinks -pax_kernel -libproxy -nss -selinux -sep-usr -vaapi -xen"
-
-USE="${SYS} ${PERIPH} ${NET} ${SEC} ${LIB} ${DEV} ${DESKTOP} ${GFX} ${AUDIO} ${APP} ${IGNORE}"
+USE="256-color aac aac aacplus aalib acl acoustid acpi -adns adplug alisp alsa alsa-plugin amr apng asm asyncns audacious audio audioeffects av bash-completion -bindist bittorrent blender blink bluetooth boost branding cache cairo calendar caps cdio cdr cg chroma chromaprint chroot clamav cli clipboard clock colord colors console convert coreaudio corefonts cover cpp cpudetection crossfade crypt css ctype cuda cue curl cursors cxx dbus -debug decode dga dhclient dhcp dhcp-tools discid dns double-precsision dri3 drm dunstify dvd dvdr ebook elogind emerge emoticons equalizer eventfd exif expat extras faac faad fading-colors fancy fbcon fbcondecor -ffmpeg fftw fifo filecaps firewalld flac fluidsynth focused-urgency fontforge font-styles fping freehand frontend ftp fuse gcc-plugin gcrypt gdbm gflags gif gksu glade glamor gles glew glfw glib glog gme -gnome gnome-keyring gnutls googledrive gpg gpl graphicsmagick graphite gstreamer gtk3 gzip harfbuzz hdri html http icons iconv icu id3tag ieee1394 imagemagick infinality inifile inotify int-quality introspection ipv6 jack jackdbus javascript jit jpeg json kate kdbus -kde keybinder keyboard kmod kms lame latex launch lcms libav libcaca libcanberra libfaac libindicate libmpd libmpdclient libnotify -libproxy libsamplerate libsoxr libssh libwww libx264 libxml3 linear -livecd llvm log logrotate lua luajit lyrics lz4 mad magic -make-symlinks markdown -math -mdev memcached memlimit mhash mime -minimal minizip modemmanager -modemmanager modules mongo motif mouse mousewheel mozilla mp3 mp3tunes mp4 mpd mpdstats mpeg mplayer mtp multilib musepack mysql nat ncat ncurses ndiff network networkmanager nls nodejs notification notification-daemon notifications notifier nouveau nping npm nsplugin -nss nvidia ogg ogg123 openal opengl openssh openssl openvdb opus oracle oss otf outputs pam pango -pax_kernel pcap pcapnav pcre pdf perftools perl pgf pipe pixbuf player plugins -plymouth png policykit portaudio portmidi postgres ppp priority pulseaudio qt5 qtmedia quicktime rar raw readline realtime recorder redis regex resize-optimization -savedconfig script scrobbler sdl -selinux -sep-usr session shadow sid signalfd slang snapshot sockets socks5 sound soundcloud soundio source soxr spell ssh ssl ssvl2 ssvl3 startup-notification startup-notifications -static -static-libs stereo stk sudo suid svg symlink sys-log systemd -system-ffmpeg system-icu system-jpeg system-libevent system-libvpx systray taglib tcl tcmalloc tcpdump tesseract themes theora threads thumbnails tiles timezone tk tray tremor truetype ttf twolame udev udisks unicode unwind upower usbadns utils uuid v4l vaapi -vaapi vala -vanilla vdpau video vim virtual/notification visualizer vst watchdog wav wayland wayland-compositor web webkit webrtc webrtc-aec websocket wext wifi wildmidi windowmode www wxwidgets X x264 x265 x509 xattr xcomposite -xen xft xkb xml xorg xpm xrandr xrender xs xscreensaver xv xvfb xvid xvmc xwayland zenmap zeroconf zip zsh-completion" 
 
 # abi
 ABI_X86="64"
 
 # dev
 USE_PYTHON="3.4"
-PYTHON_SINGLE_TARGET="python2_7"
+PYTHON_SINGLE_TARGET="python3_4"
 PYTHON_TARGETS="python2_7 python3_4"
 RUBY_TARGETS="ruby21 ruby22 ruby23 ruby24"
 DOTNET_TARGETS="net45 net40"
@@ -55,5 +43,5 @@ INPUT_DEVICES="evdev synaptics"
 ACCEPT_LICENSE="*"
 
 # mirrors
-GENTOO_MIRRORS="rsync://rsync.gtlib.gatech.edu/gentoo http://www.gtlib.gatech.edu/pub/gentoo ftp://ftp.ussg.iu.edu/pub/linux/gentoo ftp://lug.mtu.edu/gentoo/ http://lug.mtu.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ ftp://mirror.iawnet.sandia.gov/pub/gentoo/ http://mirror.iawnet.sandia.gov/gentoo/ http://mirror.lug.udel.edu/pub/gentoo/ ftp://cosmos.illinois.edu/pub/gentoo/ http://cosmos.illinois.edu/pub/gentoo/ rsync://gentoo.cs.uni.edu/gentoo-distfiles http://gentoo.cs.uni.edu/ http://mirror.usu.edu/mirrors/gentoo/"
+GENTOO_MIRRORS="http://lug.mtu.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ ftp://mirror.iawnet.sandia.gov/pub/gentoo/ http://mirror.iawnet.sandia.gov/gentoo/ http://mirror.lug.udel.edu/pub/gentoo/ ftp://cosmos.illinois.edu/pub/gentoo/ http://cosmos.illinois.edu/pub/gentoo/ rsync://gentoo.cs.uni.edu/gentoo-distfiles http://gentoo.cs.uni.edu/ http://mirror.usu.edu/mirrors/gentoo/"
 
