update emerge & make opts for desktop

--- a/os/gentoo/desktop/etc/portage/make.conf
+++ b/os/gentoo/desktop/etc/portage/make.conf
@@ -5,8 +5,8 @@
 
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j5 -l4"
-EMERGE_DEFAULT_OPTS="--jobs 5 --load-average 4"
+MAKEOPTS="-j9 -l8"
+EMERGE_DEFAULT_OPTS="-j4 -l5"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
