update emerge & make opts for laptop

--- a/os/gentoo/laptop/etc/portage/make.conf
+++ b/os/gentoo/laptop/etc/portage/make.conf
@@ -5,8 +5,8 @@
 
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j1 -l2"
-EMERGE_DEFAULT_OPTS="--jobs 1 --load-average 2"
+MAKEOPTS="-j3 -l2"
+EMERGE_DEFAULT_OPTS="-j2 -l3"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
