fix emerge & make opts for laptop

--- a/os/gentoo/laptop/etc/portage/make.conf
+++ b/os/gentoo/laptop/etc/portage/make.conf
@@ -6,7 +6,7 @@
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 MAKEOPTS="-j3 -l2"
-EMERGE_DEFAULT_OPTS="-j2 -l3"
+EMERGE_DEFAULT_OPTS="--jobs 2 --load-average 3"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
