update portage config

--- a/os/gentoo/desktop/etc/portage/repos.conf/layman.conf
+++ b/os/gentoo/desktop/etc/portage/repos.conf/layman.conf
@@ -34,6 +34,12 @@ location = /var/lib/layman/vifino-overlay
 layman-type = git
 auto-sync = No
 
+[betagarden]
+priority = 50
+location = /var/lib/layman/betagarden
+layman-type = git
+auto-sync = No
+
 [dotnet]
 priority = 50
 location = /var/lib/layman/dotnet
