update portage settings

--- a/os/gentoo/desktop/etc/portage/make.conf
+++ b/os/gentoo/desktop/etc/portage/make.conf
@@ -6,9 +6,9 @@
 # global clang config
 CC="clang"                            
 CXX="clang++"                         
-CFLAGS="${CFLAGS} -flto"              
-CXXFLAGS="${CXXFLAGS} -flto"          
-LDFLAGS="-Wl,-O2 -Wl,--as-needed"
+CFLAGS="${CFLAGS} -flto -march=native -O3 -pipe"
+CXXFLAGS="${CXXFLAGS} -flto -march=native -O3 -pipe"          
+LDFLAGS="-Wl,-O3 -Wl,--as-needed, -lc++"
 AR="llvm-ar"
 NM="llvm-nm"
 RANLIB="llvm-ranlib"
@@ -16,14 +16,14 @@ RANLIB="llvm-ranlib"
 # global gcc config
 #CC="gcc"
 #CXX="g++"
-#CFLAGS="-flto -march=native -O2 -pipe"
+#CFLAGS="-flto -march=native -O3 -pipe"
 #CXXFLAGS="${CFLAGS}"
 
 # make options
-MAKEOPTS="-j4 -l3"
+MAKEOPTS="-j9 -l8"
 
 # default emerge options
-EMERGE_DEFAULT_OPTS="--jobs 4 --load-average 3"
+EMERGE_DEFAULT_OPTS="--jobs 5 --load-average 4"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
