systemd legacy c groups now uncessary

--- a/os/gentoo/desktop/boot/loader/entries/gentoo.conf
+++ b/os/gentoo/desktop/boot/loader/entries/gentoo.conf
@@ -2,4 +2,4 @@ title Gentoo
 linux /vmlinuz
 initrd /initramfs
 initrd /intelucode
-options dolvm rootfstype=ext4 root=/dev/mapper/gentoovg-rootlv real_init=/usr/lib/systemd/systemd splash=quiet console=tty1 nvidia-drm.modeset=1 systemd.show_status=1 systemd.legacy_systemd_cgroup_controller=yes loglevel=1 
+options dolvm rootfstype=ext4 root=/dev/mapper/gentoovg-rootlv real_init=/usr/lib/systemd/systemd splash=quiet console=tty1 nvidia-drm.modeset=1 systemd.show_status=1 loglevel=1 
