update portage config

--- a/os/gentoo/desktop/etc/portage/repos.conf/ninjatools.conf
+++ b/os/gentoo/desktop/etc/portage/repos.conf/ninjatools.conf
@@ -2,4 +2,4 @@
 location = /usr/local/ninjatools
 sync-type = git
 sync-uri = https://github.com/szorfein/ninjatools.git
-auto-sync = no
+auto-sync = yes
