--- a/os/gentoo/desktop/etc/portage/repos.conf/layman.conf
+++ b/os/gentoo/desktop/etc/portage/repos.conf/layman.conf
@@ -2,47 +2,47 @@
 priority = 50
 location = /var/lib/layman/0x4d4c
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [steam-overlay]
 priority = 50
 location = /var/lib/layman/steam-overlay
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [hossie]
 priority = 50
 location = /var/lib/layman/hossie
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [petkovich]
 priority = 50
 location = /var/lib/layman/petkovich
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [fkmclane]
 priority = 50
 location = /var/lib/layman/fkmclane
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [vifino-overlay]
 priority = 50
 location = /var/lib/layman/vifino-overlay
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [betagarden]
 priority = 50
 location = /var/lib/layman/betagarden
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
 [dotnet]
 priority = 50
 location = /var/lib/layman/dotnet
 layman-type = git
-auto-sync = No
+auto-sync = Yes
 
