update laptop settings

--- a/os/gentoo/laptop/etc/portage/make.conf
+++ b/os/gentoo/laptop/etc/portage/make.conf
@@ -3,10 +3,27 @@
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
 
+# global clang
+#CC="clang"                            
+#CXX="clang++"                         
+#CFLAGS="${CFLAGS} -march=native -O2 -pipe"
+#CXXFLAGS="${CXXFLAGS} -stdlib=libc++ -march=native -O2 -pipe"          
+#LDFLAGS="-Wl,-O2 -Wl,--as-needed"
+#AR="llvm-ar"
+#NM="llvm-nm"
+#RANLIB="llvm-ranlib"
+
+# global gcc
+CC="gcc"
+CXX="g++"
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j3 -l2"
-EMERGE_DEFAULT_OPTS="--jobs 2 --load-average 3"
+
+# make options
+MAKEOPTS="-j2 -l2"
+
+# default emerge options
+EMERGE_DEFAULT_OPTS="--jobs 2 --load-average 2"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
@@ -16,10 +33,10 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-USE="256-color aac aac aacplus aalib acl acoustid acpi -adns adplug alisp alsa alsa-plugin amr apng asm asyncns audacious audio audioeffects av bash-completion -bindist bittorrent blender blink bluetooth boost branding cache cairo calendar caps cdio cdr cg chroma chromaprint chroot clamav cli clipboard clock colord colors console convert coreaudio corefonts cover cpp cpudetection crossfade crypt css ctype cuda cue curl cursors cxx dbus -debug decode dga dhclient dhcp dhcp-tools discid dns double-precsision dri3 drm dunstify dvd dvdr ebook elogind emerge emoticons equalizer eventfd exif expat extras faac faad fading-colors fancy fbcon fbcondecor -ffmpeg fftw fifo filecaps firewalld flac fluidsynth focused-urgency fontforge font-styles fping freehand frontend ftp fuse gcc-plugin gcrypt gdbm gflags gif gksu glade glamor gles glew glfw glib glog gme -gnome gnome-keyring gnutls googledrive gpg gpl graphicsmagick graphite gstreamer gtk3 gzip harfbuzz hdri html http icons iconv icu id3tag ieee1394 imagemagick infinality inifile inotify int-quality introspection ipv6 jack jackdbus javascript jit jpeg json kate kdbus -kde keybinder keyboard kmod kms lame latex launch lcms libav libcaca libcanberra libfaac libindicate libmpd libmpdclient libnotify -libproxy libsamplerate libsoxr libssh libwww libx264 libxml3 linear -livecd llvm log logrotate lua luajit lyrics lz4 mad magic -make-symlinks markdown -math -mdev memcached memlimit mhash mime -minimal minizip modemmanager -modemmanager modules mongo mono motif mouse mousewheel mozilla mp3 mp3tunes mp4 mpd mpdstats mpeg mplayer mtp multilib musepack mysql nat ncat ncurses ndiff network networkmanager nls nodejs notification notification-daemon notifications notifier nouveau nping npm nsplugin -nss nvidia ogg ogg123 openal opengl openssh openssl openvdb opus oracle oss otf outputs pam pango -pax_kernel pcap pcapnav pcre pdf perftools perl pgf pipe pixbuf player plugins -plymouth png policykit portaudio portmidi postgres ppp priority pulseaudio qt5 qtmedia quicktime rar raw readline realtime recorder redis regex resize-optimization -savedconfig script scrobbler sdl -selinux -sep-usr session shadow sid signalfd slang snapshot sockets socks5 sound soundcloud soundio source soxr spell ssh ssl ssvl2 ssvl3 startup-notification startup-notifications -static -static-libs stereo stk sudo suid svg symlink sys-log systemd -system-ffmpeg system-icu system-jpeg system-libevent system-libvpx systray taglib tcl tcmalloc tcpdump tesseract themes theora threads thumbnails tiles timezone tk tray tremor truetype ttf twolame udev udisks unicode unwind upower usbadns utils uuid v4l vaapi -vaapi vala -vanilla vdpau video vim virtual/notification visualizer vst watchdog wav wayland wayland-compositor web webkit webrtc webrtc-aec websocket wext wifi wildmidi windowmode www wxwidgets X x264 x265 x509 xattr xcomposite -xen xft xkb xml xorg xpm xrandr xrender xs xscreensaver xv xvfb xvid xvmc xwayland zenmap zeroconf zip zsh-completion" 
+USE="256-color aac aac aacplus aalib acl acoustid acpi -adns adplug alisp alsa alsa-plugin amr apng asm asyncns audacious audio audioeffects av bash-completion -bindist bittorrent blender blink bluetooth boost branding cache cairo calendar caps cdio cdr cg chroma chromaprint chroot clamav clang cli clipboard clock colord colors console convert coreaudio corefonts cover cpp cpudetection crossfade crypt css ctype cuda cue curl cursors cxx dbus -debug decode dga dhclient dhcp dhcp-tools discid dns double-precsision dri3 drm dunstify dvd dvdr ebook elogind emerge emoticons equalizer eventfd exif expat extras faac faad fading-colors fancy fbcon fbcondecor -ffmpeg fftw fifo filecaps firewalld flac fluidsynth focused-urgency fontforge font-styles fping freehand frontend ftp fuse gcc-plugin gcrypt gdbm gflags gif gksu glade glamor gles glew glfw glib glog gme -gnome gnome-keyring gnutls googledrive gpg gpl graphicsmagick graphite gstreamer gtk3 gzip harfbuzz hdri html http icons iconv icu id3tag ieee1394 imagemagick infinality inifile inotify int-quality introspection ipv6 jack jackdbus javascript jit jpeg json kate kdbus -kde keybinder keyboard kmod kms lame latex launch lcms libav libcaca libcanberra libfaac libindicate libmpd libmpdclient libnotify -libproxy libsamplerate libsoxr libssh libwww libx264 libxml3 linear -livecd llvm log logrotate lua luajit lyrics lz4 mad magic -make-symlinks markdown -math -mdev memcached memlimit mhash mime -minimal minizip modemmanager -modemmanager modules mongo mono motif mouse mousewheel mozilla mp3 mp3tunes mp4 mpd mpdstats mpeg mplayer mtp multilib musepack mysql nat ncat ncurses ndiff network networkmanager nls nodejs notification notification-daemon notifications notifier nouveau nping npm nsplugin -nss nvidia ogg ogg123 openal opengl openssh openssl openvdb opus oracle oss otf outputs pam pango -pax_kernel pcap pcapnav pcre pdf perftools perl pgf pipe pixbuf player plugins -plymouth png policykit portaudio portmidi postgres ppp priority pulseaudio python qt5 qtmedia quicktime rar raw readline realtime recorder redis regex resize-optimization ruby -savedconfig script scrobbler sdl -selinux -sep-usr session shadow sid signalfd slang snapshot sockets socks5 sound soundcloud soundio source soxr spell ssh ssl ssvl2 ssvl3 startup-notification startup-notifications -static -static-libs stereo stk sudo suid svg symlink sys-log systemd -system-ffmpeg system-icu system-jpeg system-libevent system-libvpx systray taglib tcl tcmalloc tcpdump tesseract themes theora threads thumbnails tiles timezone tinfo tk tray tremor truetype ttf twolame udev udisks unicode unwind upower usbadns utils uuid v4l vaapi -vaapi vala -vanilla vdpau video vim virtual/notification visualizer vst watchdog wav wayland wayland-compositor web webkit webrtc webrtc-aec websocket wext wifi wildmidi windowmode www wxwidgets X x264 x265 x509 xattr xcomposite -xen xft xkb xml xorg xpm xrandr xrender xs xscreensaver xv xvfb xvid xvmc xwayland zenmap zeroconf zip zsh-completion" 
 
 # abi
-ABI_X86="64"
+ABI_X86="64 32 x32"
 
 # dev
 USE_PYTHON="3.4"
@@ -44,4 +61,3 @@ ACCEPT_LICENSE="*"
 
 # mirrors
 GENTOO_MIRRORS="http://lug.mtu.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ ftp://mirror.iawnet.sandia.gov/pub/gentoo/ http://mirror.iawnet.sandia.gov/gentoo/ http://mirror.lug.udel.edu/pub/gentoo/ ftp://cosmos.illinois.edu/pub/gentoo/ http://cosmos.illinois.edu/pub/gentoo/ rsync://gentoo.cs.uni.edu/gentoo-distfiles http://gentoo.cs.uni.edu/ http://mirror.usu.edu/mirrors/gentoo/"
-
